--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.NavHeading {
+  text-decoration: none;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  color: red;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 150px;
+  padding: 10px 10px 10px 10px;
+
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background: rgb(0, 254, 255);
+  background: linear-gradient(51deg, rgba(0, 254, 255, 1) 0%, rgba(255, 0, 0, 0.9912663755458515) 91%)no-repeat;
+  height: 150vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.active {
+  background-color: blue;
+  color: #fff;
+  border-radius: 5px;
+
+  /* padding: 15px 8px 0px 8px; */
 }
+
+.active:hover {
+  color: #fff;
+}
+
+/* .navBar {
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+} */
